[package]
name = "aau"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for students at the department of computer science at AAU."
readme = "README.md"
repository = "https://github.com/AAU-Dat/cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["cargo"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
